[package]
name = "service"
version = "0.1.0"
authors = ["Schr3da <strieder.georg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
tokio = { version = "1.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
