[package]
name = "backend-core"
version = "0.1.0"
authors = ["Schr3da <strieder.georg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
specs = "0.16.1"
specs-derive = "0.4.1"
bracket-geometry = "0.8.1"
bracket-pathfinding = "0.8.1"
bracket-algorithm-traits = "0.8.1"
common-core = { path = "../common-core" }
