[package]
name = "communication-core"
version = "0.1.0"
authors = ["Schr3da <strieder.georg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common-core = { path = "./../common-core" }
backend-core = { path = "./../backend-core" }
