[package]
name = "wasm-business-module"
version = "0.1.0"
authors = ["Schr3da <strieder.georg@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
common-core = { path = "../../../crates/common-core" }
frontend-core = { path = "../../../crates/frontend-core" }

[dependencies.web-sys]
version = "0.3.45"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'KeyboardEvent',
  'MouseEvent',
  'EventTarget',
]
