[package]
name = "ios-business-module"
version = "0.1.0"
authors = ["Schr3da <strieder.georg@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
common-core = { path = "../../../crates/common-core" }
frontend-core = { path = "../../../crates/frontend-core" }
libc = "0.2.8"

[build-dependencies]
cbindgen = "0.14.1"

